# brick_bash

./: CMakeLists.txt  GrpcPatterns.cpp  README.md  main.cpp  test_sample.py
doc/: Python.txt
