cmake_minimum_required (VERSION 3.14)
project (BrickBash)

set(ROGERS_NAME "Rogers")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

message("CMAKE_C_FLAGS_DEBUG is ${CMAKE_C_FLAGS_DEBUG}")
message("CMAKE_C_FLAGS_RELEASE is ${CMAKE_C_FLAGS_RELEASE}")
message("CMAKE_C_FLAGS_RELWITHDEBINFO is ${CMAKE_C_FLAGS_RELWITHDEBINFO}")
message("CMAKE_C_FLAGS_MINSIZEREL is ${CMAKE_C_FLAGS_MINSIZEREL}")

message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
message("CMAKE_CXX_FLAGS_RELWITHDEBINFO is ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
message("CMAKE_CXX_FLAGS_MINSIZEREL is ${CMAKE_CXX_FLAGS_MINSIZEREL}")


message ( ${CMAKE_CXX_COMPILER_ID} )
message ( ${CMAKE_ROOT} )

if(MSVC)
	message ( ${MSVC_VERSION} )
	message ( ${MSVC_TOOLSET_VERSION} )
endif()


message ( ${CMAKE_C_COMPILER_VERSION} )
message ( ${CMAKE_CXX_COMPILER_VERSION} )

message ( ${CMAKE_GENERATOR} )

message ( ${ROGERS_NAME} )

add_executable(brickbash main.cpp)

